k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: chatops2
  labels:
    app: chatops2
    component: chatops2
    role: services
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: chatops2
    component: chatops2
    role: services
