k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chatops2
  labels:
    app: chatops2
    component: chatops2
    role: services
spec:
  rules:
  - host: chat.leangeder.eu
    http:
      paths:
      - backend:
          serviceName: chatops2
          servicePort: http
